buildscript {
    ext {
        springBootVersion = '2.4.5'
        protocVersion = '3.13.0'
        grpcVersion = '1.33.1'
        springBootGrpcVersion = '2.12.0.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.17'
    }
}

repositories {
    mavenCentral()
}

subprojects {

    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.mall'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = 11

    repositories {
        mavenCentral()
    }

    dependencies {
        /* lombok */
        implementation 'org.projectlombok:lombok'
        // ..모듈들이 공통적으로 사용
    }

    task hello {
        doLast {
            task -> println "I'm $task.project.name"
        }
    }

}


project(':gateway') {
    dependencies {
        implementation project(':common-entity')
        implementation project(':grpc-lib')
    }
}

project(':user-api') {
    dependencies {
        implementation project(':common-entity')
        implementation project(':grpc-lib')
    }
}
